@@ -248,7 +248,7 @@ a.stats_link.missing span	{color:#008FFF;}
 .main_title_wrap		{width:960px; margin:0 auto; padding:60px 20px 0px 20px;}
 .main_title_wrap.ended	{padding-bottom:40px;}
 .title_wrap				{width:960px; margin:0 auto; padding:0px 20px 40px 20px;margin-bottom:40px;}
-.table_wrap				{background-color:rgba(0,14,32,0.7); padding:0; border-radius:8px; position:relative; width:960px;}
+.table_wrap				{background-color:rgba(0,14,32,0.7); padding:0; border-radius:8px 8px 0 0; position:relative; width:960px;}
 .table_wrap.main		{padding-bottom:0; border-radius:8px 8px 0 0;}
 .table_wrap.view		{width:920px; margin:0 auto; padding:20px; margin-bottom:40px;}
 
@@ -468,13 +468,15 @@ table.list				{width:100%; border-collapse:collapse;}
 table.list td			{color:#B8C8CD; font-size:1.25em; line-height:1.35em; word-spacing:0.7px; padding:20px 0; vertical-align:top; border-bottom:1px solid #333642;}
 table.list tr:last-child td	{border:0; padding-bottom:20px;}
 table.list tr:hover		{background-color:rgba(0,0,0,0.4);}
-table.list td:first-child	{padding-left:20px;}
+table.list td:first-child	{padding-left:20px; font-size:16px; line-height:1.75em; width:5%;}
 table.list td span		{display:block; padding-top:5px; color:#999; font-size:0.7em; line-height:1.25em;}
-table.list td.title		{padding:0; max-width:600px;}
-table.list td.date		{text-align:right; padding-right:20px; min-width:160px;}
+table.list td span.currency	{padding:0 0 5px 0;}
+table.list td.title		{padding:0; width:60%;}
+table.list td.date		{text-align:right; padding:20px; font-size:16px; line-height:1.75em; width:15%;}
+table.list td.value		{padding:20px; text-align:right; font-size:16px; line-height:1.75em; width:20%;}
 table.list td.alert_no_iati		{text-align:center; font-size:1.6em; padding:20px 0 0 0; cursor:default;}
 table.list td.alert_no_iati a	{padding:10px 0;}
-table.list a			{display:inline-block; padding:20px; width:100%; color:#A8C5E5;}
+table.list a			{display:inline-block; padding:20px; color:#A8C5E5;}
 table.list a:focus		{color:#FFF; text-decoration:none;}
 table.list a:link  		{color:#A8C5E5; text-decoration:none;}
 table.list a:visited	{color:#A8C5E5; text-decoration:none;}
