@@ -733,19 +733,19 @@ Projects with invalid date ranges
 How is the data calculated?
 
 #active_data_description_text
-For each project, there is a start and end date. An active project is one that has started and not ended yet by {today}.
+For each project, there is a start and end date. An active project is one that has started and not ended yet by {today}.<br/><br/>This list shows you total commitments for each activity and the percentage spent so far, sorted by the most recent at the top. Full black bars may signify data quality issues where published data is missing commitment and/or transaction information.
 
 #ended_data_description_title_text
 How is the data calculated?
 
 #ended_data_description_text
-For each project, there is a start and end date. An ended project is one that has ended by {today}.
+For each project, there is a start and end date. An ended project is one that has ended by {today}.<br/><br/>This list shows you total commitments for each activity and the percentage spent so far, sorted by the most recent at the top. Full black bars may signify data quality issues where published data is missing commitment and/or transaction information.
 
 #planned_data_description_title_text
 How is the data calculated?
 
 #planned_data_description_text
-For each project, there is a start and end date. A planned project is one that has not started yet by {today}.
+For each project, there is a start and end date. A planned project is one that has not started yet by {today}.<br/><br/>This list shows you total commitments for each activity and the percentage spent so far, sorted by the most recent at the top. Full black bars may signify data quality issues where published data is missing commitment and/or transaction information.
 
 #list_activities_data_description_title_text
 How is the data calculated?
@@ -763,7 +763,7 @@ This is a list of all publishers found within this dataset.
 How is the data calculated?
 
 #missing_data_description_text
-For each project, there is a start and end date. An 'Other' project is one with invalid dates; ie, missing either a start date or both start and end dates.
+For each project, there is a start and end date. An 'Other' project is one with invalid dates; ie, missing either a start date or both start and end dates.<br/><br/>This list shows you total commitments for each activity and the percentage spent so far. Full black bars may signify data quality issues where published data is missing commitment and/or transaction information.
 
 #map_data_description_title_text
 How is the data calculated?
