@@ -52,6 +52,7 @@
 			<span>{reported_by_text}</span>
 		</a>
 	</td>
+	<td class="date" title="{table_active_date_tip_text}">{date_end}</td>
 	<td class="value">
 		<div class="activities_spend_wrap">
 			<div class="activities_spend" title="{activities_spend_text}">{commitment}<span>{currency}</span></div>
