@@ -5,6 +5,11 @@ Add collapse buttons for each result chunk
 Add counter increments for result and indicator
 Fixed Print-friendly css for transaction tables
 Updated Print-friendly css
+Add new columns for table views (projects, list/donor/sector activities)
+Updated footer text
+Updated main css
+Updated table headers and titles
+Add table header to main tables (active/ended)
 
 
 Development Portal (2017-11-18 shi)
